Initial commit - frontend and backend configured

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,9 @@
 JWT_SECRET=supersecreto123
 PORT=3000
+
+DB_USER=postgres
+DB_HOST=localhost
+DB_NAME=project_manager
+DB_PASSWORD=1002603884Xd!
+DB_PORT=5432
+
