--- a/backend/package.json
+++ b/backend/package.json
@@ -2,26 +2,21 @@
   "name": "project-manager",
   "version": "1.0.0",
   "description": "Aplicación web para planear, organizar y dar seguimiento a proyectos personales durante el año.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "node src/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sochoaq/project-manager.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sochoaq/project-manager/issues"
-  },
-  "homepage": "https://github.com/Sochoaq/project-manager#readme",
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.18.0"
   }
 }
