--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -42,3 +42,8 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment files (NUNCA hacer commit de estos)
+.env
+.env.local
+.env.production
